# vim-mgr

./: .gitignore  pyproject.toml
nvim_remote/: __init__.py  __main__.py
